Installed Alpha Theme

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,13 +10,18 @@
 
     {% include head.html %}
 
-<body class="landing">
+<body>
 
     {% include header.html %}
+
+    {% if page.featured-image %}
+    <span class="image featured">
+      <img src="{{ page.featured-image }}" alt="">
+    </span>
+    {% endif %}
     
     {{ content }}
     
-    {% include cta.html %}
     {% include footer.html %}
 
 
