--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -29,6 +29,9 @@
           <li class="nav-item{% if page.navButton == "Hymns" %} active{% endif %}">
             <a class="nav-link" href="{{ "/hymns" | relative_url }}">Hymns</a>
           </li>
+          <li class="nav-item{% if page.navButton == "Posts" %} active{% endif %}">
+            <a class="nav-link" href="{{ "/posts" | relative_url }}">Posts</a>
+          </li>
         </ul>
       </div>
     </nav>
