--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -3,6 +3,8 @@ layout: default
 ---
 <div class="container">
   <div class="row">
-    <h1 class="mb-5" style="width: 100%; text-align: center;">{{ page.title }}</h1>
+    <div class="col-sm-8">
+      {{ content }}
+    </div>
   </div>
 </div>
