--- a/docs/_layouts/review.html
+++ b/docs/_layouts/review.html
@@ -1,27 +1,31 @@
 ---
 layout: default
 ---
+{%- assign hymns=(site.hymns | where: "hymn_id", page.hymn_id) -%}
+{%- assign hymn=hymns[0] -%}
 <div class="container">
   <div class="row">
     <div class="col-sm-8 mx-auto border shadow bg-light m-1 p-2">
       {{ content }}
     </div>
   </div>
+{%- if hymn.products.size == 2 -%}
+<!--Side by Side list of products-->
   <div class="row">
     <h1 class="col-sm-12 mt-5 mx-auto" style="width: 100%; text-align: center;">Sheet Music</h1>
   </div>
   <div class="row">
     <div class="col-sm-6 list-group">
       <h2 class="list-item" style="width: 100%; text-align: center;">Current</h2>
-      <a class="list-item mx-auto border shadow-lg bg-light m-1 p-2" href="{{ site.baseurl }}/Source/published/{{ page.hymn_id }}/{{ page.hymn_id }}_sheet_music.pdf">
-        <img src="{{ site.baseurl }}/Source/published/{{ page.hymn_id }}/{{ page.hymn_id }}_sheet_music_thumbnail.png" alt="{{ page.title }} Sheet Music" width=300/>
-      </a>
+      <div class="list-item mx-auto border shadow-lg bg-light m1 p-2">
+{%- include sheet_music.html hymn=hymn version="published" -%}
+      </div>
     </div>
     <div class="col-sm-6 list-group">
       <h2 class="list-item" style="width: 100%; text-align: center;">Updated</h2>
-      <a class="list-item mx-auto border shadow-lg bg-light m-1 p-2" href="{{ site.baseurl }}/Source/review/{{ page.hymn_id }}/{{ page.hymn_id }}_sheet_music.pdf">
-        <img src="{{ site.baseurl }}/Source/review/{{ page.hymn_id }}/{{ page.hymn_id }}_sheet_music_thumbnail.png" alt="{{ page.title }} Sheet Music" width=300/>
-      </a>
+      <div class="list-item mx-auto border shadow-lg bg-light m1 p-2">
+{%- include sheet_music.html hymn=hymn version="review" -%}
+      </div>
     </div>
   </div>
   <div class="row">
@@ -30,15 +34,15 @@ layout: default
   <div class="row">
     <div class="col-sm-6 list-group">
       <h2 class="list-item" style="width: 100%; text-align: center;">Current</h2>
-      <a class="list-item mx-auto border shadow-lg bg-light m-1 p-2" href="{{ site.baseurl }}/Source/published/{{ page.hymn_id }}/{{ page.hymn_id }}_slides.pdf">
-        <img src="{{ site.baseurl }}/Source/published/{{ page.hymn_id }}/{{ page.hymn_id }}_slides_thumbnail.png" alt="{{ page.title }} Slides" width=300/>
-      </a>
+      <div class="list-item mx-auto border shadow-lg bg-light m1 p-2">
+{%- include slides.html hymn=hymn version="published" -%}
+      </div>
     </div>
     <div class="col-sm-6 list-group">
       <h2 class="list-item" style="width: 100%; text-align: center;">Updated</h2>
-      <a class="list-item mx-auto border shadow-lg bg-light m-1 p-2" href="{{ site.baseurl }}/Source/review/{{ page.hymn_id }}/{{ page.hymn_id }}_slides.pdf">
-        <img src="{{ site.baseurl }}/Source/review/{{ page.hymn_id }}/{{ page.hymn_id }}_slides_thumbnail.png" alt="{{ page.title }} Slides" width=300/>
-      </a>
+      <div class="list-item mx-auto border shadow-lg bg-light m1 p-2">
+{%- include slides.html hymn=hymn version="review" -%}
+      </div>
     </div>
   </div>
   <div class="row">
@@ -48,66 +52,47 @@ layout: default
     <div class="col-sm-6">
       <div class="list-group">
         <h2 class="list-item" style="width: 100%; text-align: center;">Current</h2>
-        <div class="list-item list-group border shadow-lg bg-light m-1 p-2">
-          <h4 class="list-item mt-2">All:</h4>
-          <audio class="list-item" controls>
-            <source src="{{ site.baseurl }}/Source/published/{{ page.hymn_id }}/{{ page.hymn_id }}_audio_all.mp3" type="audio/mpeg">
-            Your browser does not support this audio element
-          </audio>
-          <h4 class="list-item mt-2">Soprano:</h4>
-          <audio class="list-item" controls>
-            <source src="{{ site.baseurl }}/Source/published/{{ page.hymn_id }}/{{ page.hymn_id }}_audio_soprano.mp3" type="audio/mpeg">
-            Your browser does not support this audio element
-          </audio>
-          <h4 class="list-item mt-2">Alto:</h4>
-          <audio class="list-item" controls>
-            <source src="{{ site.baseurl }}/Source/published/{{ page.hymn_id }}/{{ page.hymn_id }}_audio_alto.mp3" type="audio/mpeg">
-            Your browser does not support this audio element
-          </audio>
-          <h4 class="list-item mt-2">Tenor:</h4>
-          <audio class="list-item" controls>
-            <source src="{{ site.baseurl }}/Source/published/{{ page.hymn_id }}/{{ page.hymn_id }}_audio_tenor.mp3" type="audio/mpeg">
-            Your browser does not support this audio element
-          </audio>
-          <h4 class="list-item mt-2">Bass:</h4>
-          <audio class="list-item" controls>
-            <source src="{{ site.baseurl }}/Source/published/{{ page.hymn_id }}/{{ page.hymn_id }}_audio_bass.mp3" type="audio/mpeg">
-            Your browser does not support this audio element
-          </audio>
+        <div class="list-item border shadow-lg bg-light m-1 p-2">
+{%- include audio.html hymn=hymn version="published" -%}
         </div>
       </div>
     </div>
     <div class="col-sm-6">
       <div class="list-group">
         <h2 class="list-item" style="width: 100%; text-align: center;">Updated</h2>
-        <div class="list-item list-group border shadow-lg bg-light m-1 p-2">
-          <h4 class="list-item mt-2">All:</h4>
-          <audio class="list-item" controls>
-            <source src="{{ site.baseurl }}/Source/review/{{ page.hymn_id }}/{{ page.hymn_id }}_audio_all.mp3" type="audio/mpeg">
-            Your browser does not support this audio element
-          </audio>
-          <h4 class="list-item mt-2">Soprano:</h4>
-          <audio class="list-item" controls>
-            <source src="{{ site.baseurl }}/Source/review/{{ page.hymn_id }}/{{ page.hymn_id }}_audio_soprano.mp3" type="audio/mpeg">
-            Your browser does not support this audio element
-          </audio>
-          <h4 class="list-item mt-2">Alto:</h4>
-          <audio class="list-item" controls>
-            <source src="{{ site.baseurl }}/Source/review/{{ page.hymn_id }}/{{ page.hymn_id }}_audio_alto.mp3" type="audio/mpeg">
-            Your browser does not support this audio element
-          </audio>
-          <h4 class="list-item mt-2">Tenor:</h4>
-          <audio class="list-item" controls>
-            <source src="{{ site.baseurl }}/Source/review/{{ page.hymn_id }}/{{ page.hymn_id }}_audio_tenor.mp3" type="audio/mpeg">
-            Your browser does not support this audio element
-          </audio>
-          <h4 class="list-item mt-2">Bass:</h4>
-          <audio class="list-item" controls>
-            <source src="{{ site.baseurl }}/Source/review/{{ page.hymn_id }}/{{ page.hymn_id }}_audio_bass.mp3" type="audio/mpeg">
-            Your browser does not support this audio element
-          </audio>
+        <div class="list-item border shadow-lg bg-light m-1 p-2">
+{%- include audio.html hymn=hymn version="review" -%}
         </div>
       </div>
     </div>
   </div>
+{%- else -%}
+<!--Just the review materials-->
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="list-group">
+        <h2 class="list-item" style="width: 100%; text-align: center;">Sheet Music</h2>
+        <div class="list-item mx-auto border shadow-lg bg-light m1 p-2">
+{%- include sheet_music.html hymn=hymn version="review" -%}
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="list-group">
+        <h2 class="list-item" style="width: 100%; text-align: center;">Slides</h2>
+        <div class="list-item mx-auto border shadow-lg bg-light m1 p-2">
+{%- include slides.html hymn=hymn version="review" -%}
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="list-group">
+        <h2 class="list-item" style="width: 100%; text-align: center;">Practice MP3s</h2>
+        <div class="list-item border shadow-lg bg-light m-1 p-2">
+{%- include audio.html hymn=hymn version="review" -%}
+        </div>
+      </div>
+    </div>
+  </div>
+{%- endif -%}
 </div>
