--- a/docs/_includes/audio.html
+++ b/docs/_includes/audio.html
@@ -3,27 +3,27 @@
 <div class="list-group">
   <h4 class="list-item mt-2">All:</h4>
   <audio class="list-item" controls>
-    <source src="{{ site.baseurl }}/Source/{{ vesion }}/{{ hymn.hymn_id }}/{{ hymn.hymn_id }}_audio_all.mp3" type="audio/mpeg">
+    <source src="{{ site.baseurl }}/Source/{{ version }}/{{ hymn.hymn_id }}/{{ hymn.hymn_id }}_audio_all.mp3" type="audio/mpeg">
     Your browser does not support this audio element
   </audio>
   <h4 class="list-item mt-2">Soprano:</h4>
   <audio class="list-item" controls>
-    <source src="{{ site.baseurl }}/Source/{{ vesion }}/{{ hymn.hymn_id }}/{{ hymn.hymn_id }}_audio_soprano.mp3" type="audio/mpeg">
+    <source src="{{ site.baseurl }}/Source/{{ version }}/{{ hymn.hymn_id }}/{{ hymn.hymn_id }}_audio_soprano.mp3" type="audio/mpeg">
     Your browser does not support this audio element
   </audio>
   <h4 class="list-item mt-2">Alto:</h4>
   <audio class="list-item" controls>
-    <source src="{{ site.baseurl }}/Source/{{ vesion }}/{{ hymn.hymn_id }}/{{ hymn.hymn_id }}_audio_alto.mp3" type="audio/mpeg">
+    <source src="{{ site.baseurl }}/Source/{{ version }}/{{ hymn.hymn_id }}/{{ hymn.hymn_id }}_audio_alto.mp3" type="audio/mpeg">
     Your browser does not support this audio element
   </audio>
   <h4 class="list-item mt-2">Tenor:</h4>
   <audio class="list-item" controls>
-    <source src="{{ site.baseurl }}/Source/{{ vesion }}/{{ hymn.hymn_id }}/{{ hymn.hymn_id }}_audio_tenor.mp3" type="audio/mpeg">
+    <source src="{{ site.baseurl }}/Source/{{ version }}/{{ hymn.hymn_id }}/{{ hymn.hymn_id }}_audio_tenor.mp3" type="audio/mpeg">
     Your browser does not support this audio element
   </audio>
   <h4 class="list-item mt-2">Bass:</h4>
   <audio class="list-item" controls>
-    <source src="{{ site.baseurl }}/Source/{{ vesion }}/{{ hymn.hymn_id }}/{{ hymn.hymn_id }}_audio_bass.mp3" type="audio/mpeg">
+    <source src="{{ site.baseurl }}/Source/{{ version }}/{{ hymn.hymn_id }}/{{ hymn.hymn_id }}_audio_bass.mp3" type="audio/mpeg">
     Your browser does not support this audio element
   </audio>
 </div>
